Start to extarnalise game to a service.

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,9 @@
 <script src="scripts/controllers/account.js"></script>
 <script src="scripts/directives/ngShowAuth.js"></script>
 <script src="scripts/directives/ngHideAuth.js"></script>
+
+
+<script src="scripts/services/GameService.js"></script>
 <script src="scripts/routes.js"></script>
 <script src="scripts/controllers/tables.js"></script>
 <script src="scripts/controllers/table.js"></script>
